tests/NormalTests/paczka1/fuzzy1/10771971.err
Error in line 2: MkY4RMB S257 69,5
Error in line 7: DZwDRbEy S257 90,4
Error in line 15: KNoVAFgtiYy S83 18,5
Error in line 20: bTwS3I S723 40,9
Error in line 12: DZwDRbEy S942 20,1
Error in line 22: DZwDRbEy S83 18,7
Error in line 24: bTwS3I S83 59,12
Error in line 28: bTwS3I S83 -4,4
Error in line 21: bTwS3I S83 75,3
Error in line 37: S942 S257 406,
